--- a/最終課題/home/kadai_home.html
+++ b/最終課題/home/kadai_home.html
@@ -45,7 +45,11 @@
 			<h3 class="sub-title">自己紹介</h3>
 			<p>
 				２００３年５月１３日生まれで生まれてから旅行もほぼいかず山口県で過ごしてきた。今回は課題に向け頑張って作っている。
-			</p>			
+			</p>
+			<div class="omikuzi">
+				<h3>おみくじ</h3>
+				<button type="">おみくじを引いてみる</button>
+			</div>
 		</aside>
 	</div>
 	<script src=script.js></script>
