--- a/最終課題/home/kadai_home.html
+++ b/最終課題/home/kadai_home.html
@@ -19,7 +19,7 @@
 				<ul class="main-nav">
 					<li><a href="../kankou/kadai_kankou.html">観光地</a></li>
 					<li><a href="../ramen/kadai_ramen.html">ラーメン</a></li>
-					<li><a href="../omiyage/kadai_omiyage.html">お土産</a></li>
+					<li><a href="../omake/kadai_omake.html">おまけ</a></li>
 				</ul>
 			</nav>
 		</header><!-- /header -->
@@ -48,7 +48,8 @@
 			</p>
 			<div class="omikuzi">
 				<h3>おみくじ</h3>
-				<button type="">おみくじを引いてみる</button>
+				<button id="omikuzi_button">おみくじを引いてみる</button>
+				<p>今日の運勢は<span id="omikuzi_kekka">？吉</span>です！</p>
 			</div>
 		</aside>
 	</div>
