--- a/最終課題/kankou/kadai_kankou.html
+++ b/最終課題/kankou/kadai_kankou.html
@@ -19,7 +19,7 @@
 				<ul class="main-nav">
 					<li><a href="kadai_kankou.html">観光地</a></li>
 					<li><a href="../ramen/kadai_ramen.html">ラーメン</a></li>
-					<li><a href="../omiyage/kadai_omiyage.html">お土産</a></li>
+					<li><a href="../omake/kadai_omake.html">おまけ</a></li>
 				</ul>
 			</nav>
 		</header><!-- /header -->
@@ -53,7 +53,79 @@
 					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3309.3978169102647!2d130.94324371009844!3d33.95661312266393!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3543bd9d08825735%3A0x6c22b1c00c89b942!2z5ZSQ5oi45biC5aC0!5e0!3m2!1sja!2sjp!4v1688449944573!5m2!1sja!2sjp" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 				</div>
 			</div>
+			<p>また、すぐ隣には遊園地だったり水族館などもあります！</p>
+			<div class="location">
+				<div class="location-info">
+					<h3 class="sub-title">ハイカラっと横丁</h3>
+					<p>
+						住所：山口県下関市<br>
+						あるかぽーと１−４０<br>
+						営業時間：<br>
+						月～金曜日/午前１１時～午後９時<br>
+						土曜日・日曜日　/午前１０時～午後９時<br>
+					</p>
+					<img id="haikaratto" src="../images/haikaratto.jpg" alt="遊園地">
+				</div>
+				<div class="location-map">
+					<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13238.139616518774!2d130.9412719!3d33.9530885!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3543bd9934ccbcc7%3A0xd88a644b1b0b5e04!2z44Gv44GE77yB44GL44KJ44Gj44Go5qiq5LiB!5e0!3m2!1sja!2sjp!4v1688959632356!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+				</div>
+			</div>
+			<div class="location">
+				<div class="location-info">
+					<h3 class="sub-title">市立しものせき水族館 海響館</h3>
+					<p>
+						住所：山口県下関市<br>
+						あるかぽーと６－１<br>
+						営業時間：<br>
+						９時３０分～１７時３０分
+					</p>
+					<img src="../images/kaikyoukann.jpg" alt="ふぐ">
+				</div>
+				<div class="location-map">
+					<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13238.139616518774!2d130.9412719!3d33.9530885!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3543bd9934ccbcc7%3A0xd88a644b1b0b5e04!2z44Gv44GE77yB44GL44KJ44Gj44Go5qiq5LiB!5e0!3m2!1sja!2sjp!4v1688959632356!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+				</div>
+			</div>
+			<h2>岩国市</h2>
+			<img  id="simonoseki_map" src="../images/iwakuni.jpg" alt="下関市の地図">
+			<p>岩国市は先ほど紹介した下関と真反対の位置にあります。正直錦帯橋といろり山賊を楽しみに行く場所だと思っていますが山口に来たならぜひという感じでございます！</p>
+			<div id="karatoitiba">
+				<img src="../images/kintaikyou.jpg" alt="錦帯橋">
+				<img src="../images/kintaikyouno.jpg" alt="街並み">
+				<img src="../images/irorisanzoku.jpg" alt="いろり山賊">
+			</div>
+			<p>いろり山賊は綺麗な景色を見ながらご飯を食べることができ、山口市からだと行くのは少し大変なんですが日々の疲れだったりが癒されてとてもいい場所だったなと感じているので気分転換に行ってみるのもありだと思います！</p>
+			<div class="location">
+				<div class="location-info">
+					<h3 class="sub-title">錦帯橋</h3>
+					<p>
+						住所：山口県岩国市<br>
+						岩国１丁目２<br>
+					</p>
+					<img id="kintaikyou2" src="../images/kintaikyou2.jpg" alt="">
+				</div>
+				<div class="location-map">
+					<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13204.676106792062!2d132.1784105!3d34.1675959!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3545343e6b6e661d%3A0x6654b3733cf09708!2z6Yym5biv5qmL!5e0!3m2!1sja!2sjp!4v1688964605376!5m2!1sja!2sjp" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+				</div>
+			</div>
+			<div class="location">
+				<div class="location-info">
+					<h3 class="sub-title">いろり山賊</h3>
+					<p>
+						住所：山口県岩国市<br>
+						玖珂町１３８０−１<br>
+						営業時間：<br>
+						１０時００分～２３時００分<br>
+						定休日　火曜日、水曜日
+					</p>
+					<img id="kintaikyou2" src="../images/irorisanzoku2.jpg" alt="">
+				</div>
+				<div class="location-map">
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d105713.30826212758!2d131.95093524335934!3d34.10690019999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x35453aa319d243c3%3A0x4b5ed8cf8f1d4c08!2z44GE44KN44KK5bGx6LOKIOeOluePguW6lw!5e0!3m2!1sja!2sjp!4v1688964966973!5m2!1sja!2sjp" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+				</div>
+			</div>
 		</div>
+		<h1>さいごに</h1>
+		<p id="saigo">紹介したほかにも色々楽しい場所やいい場所はあると思います！よき山口ライフを！</p>
 	</div>
 	<script src=script.js></script>
 	<footer>
