--- a/最終課題/kankou/kadai_kankou.html
+++ b/最終課題/kankou/kadai_kankou.html
@@ -18,16 +18,15 @@
 			<nav>
 				<ul class="main-nav">
 					<li><a href="kadai_kankou.html">観光地</a></li>
-					<li><a href="../ramen/kadai_ramen.html">ラーメン</a></li>
 					<li><a href="../omake/kadai_omake.html">おまけ</a></li>
 				</ul>
 			</nav>
 		</header><!-- /header -->
 	</div>
-	<div class="kankou-contents" wrapper>
+	<div class="kankou-contents wrapper">
 		<h1>かんこーち</h1>
 		<p>山口県は自然豊かな場所です。せっかく観光するのならそういった自然を楽しみながら、ドライブや食事を楽しんでいただければなと思います。</p>
-		<div class="kankou-sub-contents" wrapper>
+		<div class="kankou-sub-contents wrapper">
 			<h2>下関市</h2>
 			<img  id="simonoseki_map" src="../images/simonoseki.jpg" alt="下関市の地図">
 			<p>下関市は福岡とつながっている部分で個人的には山口を回るならまず外せないところなのかなと思っています。</p>
