--- a/最終課題/omake/kadai_omake.html
+++ b/最終課題/omake/kadai_omake.html
@@ -18,7 +18,6 @@
 			<nav>
 				<ul class="main-nav">
 					<li><a class="kazino_button" href="../kankou/kadai_kankou.html">観光地</a></li>
-					<li><a class="kazino_button" href="../ramen/kadai_ramen.html">ラーメン</a></li>
 					<li><a class="kazino_button" href="kadai_omake.html">おまけ</a></li>
 				</ul>
 			</nav>
@@ -34,12 +33,12 @@
 				<p>あなたの数は<span id="zibun_kazu">1</span>です。</p>
 				<p>場の数は<span id="banokazu">1</span>です。</p>
 				<div id="status">
-					<p>排出金 <span id="haisyutukinn"></span>G</p>
+					<p>排出金 <span id="haisyutukinn">0</span>G</p>
 					<p>所持金<span id="syozikin">100</span>G</p>
 				</div>
 				<div class="yosou">
 					<button id="up" onclick="game_start_up()">大きい</button>
-					<button id="down" onclick="game_start()">小さい</button>
+					<button id="down" onclick="game_start_down()">小さい</button>
 				</div>
 			</div>
 			<div>
@@ -56,6 +55,7 @@
 					<option value="50">50</option>
 					<option value="100">100</option>
 					<option value="200">200</option>
+					<option value="500">500</option>
 				</select>
 				<button onclick="kakekin_kettei()">設定</button>
 				<p>現在　　<span id="genzai_kakekin">10</span>G</p>
@@ -64,7 +64,7 @@
 				<h2>ルール説明</h2>
 				<p>
 				トランプがランダムに１～１３の数字の中で選ばれて表示されます。<br>
-				表示される数字が現在の数字以上か未満かを予想して水色のボタンをクリックしてください。<br>
+				次に表示される数字が現在の数字(場の数字)以上か未満かを予想して水色のボタンをクリックしてください。<br>
 				予想が的中すれば掛け金の二倍の額が排出金として追加されます<br>
 				頑張ってお金を増やしてください。
 				</p>
